# Social-Media-Misinformation-Detection-System

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  run_dashboard.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-tests.yml
alembic/: env.py
alembic/versions/: 7a26d0e3a046_create_initial_tables.py
config/: config.py
misinformation_detection/: database.py  models.py
misinformation_detection/analysis/: detection.py
misinformation_detection/data_collection/: tiktok.py  twitter.py
misinformation_detection/processing/: image_processing.py  text_processing.py
misinformation_detection/visualization/: dashboard.py
tests/test_basic/: test_placeholder.py
