[project]
name = "social-media-misinformation-detection-system"
version = "0.1.0"
description = "A system for detecting and analyzing potential misinformation on social media platforms"
authors = [
    {name = "Yue Lei, yuelei0807@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
black = "^25.1.0"
flake8 = "^7.1.2"
pre-commit = "^4.1.0"

