[tool.poetry]
name = "social-media-misinformation-detection-system"
version = "0.1.0"
description = "A system for detecting and analyzing potential misinformation on social media platforms"
authors = ["Yue Lei <yuelei0807@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "misinformation_detection"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
tweepy = "^4.15.0"
sqlalchemy = "^2.0.38"
alembic = "^1.15.1"
nltk = "^3.9.1"
moviepy = "^2.1.2"
speechrecognition = "^3.14.1"
opencv-python = "^4.11.0.86"
transformers = "^4.49.0"
scikit-learn = "^1.6.1"
streamlit = "^1.43.1"
plotly = "^6.0.0"
matplotlib = "^3.10.1"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
black = "^25.1.0"
flake8 = "^7.1.2"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
